--- a/spellcheck/package.json
+++ b/spellcheck/package.json
@@ -9,10 +9,11 @@
   "devDependencies": {
     "coffee-script": "latest",
     "coffeescript-concat": "latest",
-    "watch": "latest"
+    "nano-server": "latest"
   },
   "scripts": {
-    "build": "coffeescript-concat -R src/ -o dist/dist.coffee | coffee -c dist/dist.coffee",
-    "build:watch": "watch 'npm run build'"
+    "build": "coffeescript-concat -R src/ -o dist/dist.coffee | coffee -c --cautious dist/dist.coffee",
+    "build:watch": "watch 'npm run build'",
+    "server": "echo \"press ctrl-x to exit\" & nano-server 8123 ./dist/"
   }
 }
