--- a/spellcheck/package.json
+++ b/spellcheck/package.json
@@ -12,7 +12,7 @@
     "nano-server": "latest"
   },
   "scripts": {
-    "build": "coffeescript-concat -R src/ -o dist/dist.coffee | coffee -c --cautious dist/dist.coffee",
+    "build": "coffeescript-concat -R src/ -o dist/dist.coffee | coffee -c dist/dist.coffee",
     "build:watch": "watch 'npm run build'",
     "server": "echo \"press ctrl-x to exit\" & nano-server 8123 ./dist/"
   }
