--- a/spellcheck/package.json
+++ b/spellcheck/package.json
@@ -12,7 +12,7 @@
     "nano-server": "latest"
   },
   "scripts": {
-    "build": "coffeescript-concat -R src/ -o dist/dist.coffee & cd dist; coffee -cm dist.coffee",
+    "build": "echo \"concating coffeescript\" && coffeescript-concat -R src/ -o dist/dist.coffee && echo \"compiling coffeescript\" && cd dist; coffee -cm dist.coffee",
     "server": "echo \"press ctrl+c to exit\" & nano-server 8123 ./dist/"
   }
 }
